# Acquacotta

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Containerfile  Containerfile.base  Containerfile.gh  Containerfile.test  README.md  REQUIREMENTS.md  acquacotta-launcher.sh  acquacotta.crunchtools.com.service  acquacotta.env.example  acquacotta.service  app.py  com.github.fatherlinux.Acquacotta.desktop  com.github.fatherlinux.Acquacotta.metainfo.xml  com.github.fatherlinux.Acquacotta.yml  gh-wrapper.sh  gourmand-exceptions.toml  gourmand.toml  index.html  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sheets_storage.py  tsconfig.json
.gemini/: styleguide.md
.github/workflows/: container-base.yml  container-build.yml  test.yml
.specify/memory/: constitution.md
.specify/specs/000-baseline/: plan.md  spec.md
docs/: DATA_ARCHITECTURE.md
specs/001-slidable-timer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-slidable-timer/checklists/: requirements.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: export.rs  mod.rs  pomodoro.rs  settings.rs  timer.rs
src-tauri/src/models/: mod.rs  pomodoro.rs  settings.rs
src-tauri/src/storage/: csv.rs  mod.rs
src/lib/api/: commands.ts
src/lib/components/: Chart.svelte  Navigation.svelte  PomodoroForm.svelte  PomodoroList.svelte  Reports.svelte  Settings.svelte  Timer.svelte
src/lib/stores/: pomodoros.ts  settings.ts  timer.ts
src/lib/types/: index.ts
static/: acquacotta-http.conf  acquacotta-ssl.conf  entrypoint.sh
static/js/: storage.js  utils.js
templates/: index.html  privacy.html  terms.html
tests/: __init__.py  conftest.py  test_app.py  test_sheets_storage.py  test_timezone.js
tests/js/: test_utils.html  test_utils.js
