[package]
name = "acquacotta"
version = "0.1.0"
description = "A Pomodoro time tracking application"
authors = ["Scott McCarty"]
edition = "2021"

[lib]
name = "acquacotta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["sync"] }
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
